@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE toc PUBLIC "-//Sun Microsystems Inc.//DTD JavaHelp TOC Version 2.0//EN" "http://java.sun.com/products/javahelp/toc_2_0.dtd">
+<toc version="2.0">
+    <tocitem text="Views" mergetype="javax.help.SortMerge">
+        <tocitem text="Word Cloud View" mergetype="javax.help.SortMerge">
+            <tocitem text="Word Cloud View" target="au.gov.asd.tac.constellation.views.wordcloud.ui.WordCloudTopComponent" />
+        </tocitem>
+    </tocitem>
+</toc>
