@@ -1,0 +1,38 @@
+# Word Cloud View
+
+<table class="table table-striped">
+<thead>
+<tr class="header">
+<th>Constellation Action</th>
+<th>Keyboard Shortcut</th>
+<th>User Action</th>
+<th style="text-align: center;">Menu Icon</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Open Word Cloud View</td>
+<td>Ctrl + Shift + W</td>
+<td>Experimental -&gt; Views -&gt; Word Cloud View</td>
+<td style="text-align: center;"><img src="../ext/docs/CoreWordCloudView/src/au/gov/asd/tac/constellation/views/wordcloud/resources/word_cloud.png" alt="Word Cloud View Icon" /></td>
+</tr>
+</tbody>
+</table>
+
+## Introduction
+
+The Word Cloud View is used to create word clouds based on words or phrased found 
+within attributes in nodes and transactions on a graph. The length of the phrase,
+how many words the phrase can span and the minimum number of times the phrase or 
+word needs to appear on a graph for it to be shown in the word cloud can be 
+modified. A text file is also able to be added to do a background frequency
+comparison. 
+
+<div style="text-align: center">
+
+<img src="../ext/docs/CoreWordCloudView/src/au/gov/asd/tac/constellation/views/wordcloud/resources/WordCloudView.png" alt="Word Cloud View" />
+
+</div>
+
+
+
